force-app/main/default/objects/Renewal_SLA__mdt/Renewal_SLA__mdt.object-meta.xml
<CustomObject>
    <label>Renewal SLA</label>
    <pluralLabel>Renewal SLAs</pluralLabel>
</CustomObject>