force-app/main/default/objects/Renewal_SLA__mdt/fields/Commercial_Proposal_Days__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Proposal_Days__c</fullName>
    <label>Commercial Proposal Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>