force-app/main/default/objects/Renewal_SLA__mdt/fields/Escalation_Days__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Days__c</fullName>
    <label>Escalation Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>