force-app/main/default/objects/Renewal_SLA__mdt/fields/Opportunity_Active_Days__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Active_Days__c</fullName>
    <label>Opportunity Active Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>