force-app/main/default/objects/Renewal_SLA__mdt/fields/Qualification_Days__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Days__c</fullName>
    <label>Qualification Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>