force-app/main/default/objects/Renewal_SLA__mdt/fields/Renewal_Identified_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Identified_Days__c</fullName>
    <label>Renewal Identified Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>